<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:outlineAmbientShadowColor="@color/black"
    android:background="@drawable/rectangle_rounded">

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:text="Add Job Listing"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/postTitle"
        android:inputType="text"
        android:background="@drawable/et_background"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/post_title"
        android:layout_below="@+id/pageTitle"
        tools:ignore="Autofill"/>
    <EditText
        android:id="@+id/postBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="150dip"
        android:minLines="3"
        android:inputType="textMultiLine"
        android:background="@drawable/et_background"
        android:padding="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="top"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="Your listing (max 1000 characters)"
        android:textSize="15sp"
        android:layout_below="@+id/postTitle"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/wordCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_alignEnd="@+id/postBody"
        android:layout_below="@+id/postBody"
        android:text="@string/characters_left_1000"/>
    <EditText
        android:id="@+id/postLocation"
        android:inputType="text"
        android:background="@drawable/et_background"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/postcode"
        android:layout_below="@+id/wordCount"
        tools:ignore="Autofill"/>

    <CheckBox
        android:id="@+id/contactConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/dark_grey"
        android:text="@string/include_my_contact_number"
        android:layout_below="@+id/postLocation"/>
    <Button
        android:id="@+id/btnCreateListing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contactConfirm"
        android:text="@string/create_post"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:backgroundTint="@color/acqua"
        android:textColor="@color/white"
        android:layout_marginRight="30dp"/>
</RelativeLayout>
</ScrollView>